<package>
  <name>aaucns_ros_watchdog</name>
  <version>0.0.0</version>
  <description>
    Metapackage for the ros_watchdog
  </description>
  <author email="roland.jung@aau.at">Roland Jung</author>
  <maintainer email="roland.jung@aau.at">Roland Jung</maintainer>
  <license>GNU GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
<export>
  <metapackage/>
</export>
</package>
