<?xml version="1.0"?>
<package format="2">
  <name>aaucns_watchdog</name>
  <version>1.0.0</version>
  <description>Metapackage for the ros_watchdog</description>

  <maintainer email="roland.jung@aau.at">Roland Jung</maintainer>
  <maintainer email="martin.scheiber@aau.at">Roland Jung</maintainer>

  <license>BSD-2-Clause-License with no commercial use allowed. No license in patents is granted.</license>

  <author email="roland.jung@aau.at">Roland Jung</author>
  <author email="martin.scheiber@aau.at">Roland Jung</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>watchdog_msgs</exec_depend>
  <exec_depend>ros_watchdog</exec_depend>
  <exec_depend>watchdog_bringup</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
