<package>
  <name>autonomy_msgs</name>
  <version>0.0.1</version>
  <description>
    ROS messages for high-level/abstract  system/mission/autonomy status.
  </description>
  <author email="roland.jung@aau.at">Roland Jung</author>
  <maintainer email="roland.jung@aau.at">Roland Jung</maintainer>
  <license>GNU GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
