<?xml version="1.0"?>
<package format="2">
  <name>ros_watchdog</name>
  <version>1.0.0</version>
  <description>The ros_watchdog package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="roland.jung@aau.at">rjung</maintainer>
  <maintainer email="martin.scheiber@aau.at">Roland Jung</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD-2-Clause-License with no commercial use allowed. No license in patents is granted.</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/obstacle_fusion</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="roland.jung@aau.at">Roland Jung</author>
  <author email="martin.scheiber@aau.at">Roland Jung</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>watchdog_msgs</depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
